--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body{
+  display: grid;
+  background-color :rgb(186, 251, 101);
+  /* grid-template-columns: repeat(5, 1fr); */
+  
+}
+.header{
+  display: grid;
+  justify-content: center;
+  background-color: rgb(156, 218, 21);
+  color: rgb(248, 250, 247);
+  text-align: center;
+  height: 150px;
+  padding-top: 30px;
+ 
+  
+}
+.headerIncome{
+max-width: 400px;
+  margin-top: 10px;
+  height: 30px;
+  background-color: rgb(186, 251, 101) ;
+}
+.headerExpenses{
+max-width: 400px;
+
+  height: 30px;
+  background-color: rgb(186, 251, 101) ;
+
+}
+.form{
+  text-align: center;
+  max-width: 1000px;
+  height: 100px;
+  background-color: rgb(186, 251, 101);
+  margin-top: 50px;
+}
+.select{
+  width: 50px;
+  text-align: center;
+  height: 35px;
+  border-radius: 12px;
+  border-width: 0;
+}
+.description{
+  width: 300px;
+  text-align: center;
+  height: 32px;
+  border-radius: 12px;
+  border-width: 0;
+}
+.value{
+  width: 200px;
+  text-align: center;
+  height: 32px;
+  border-radius: 12px;
+  border-width: 0;
+}
+.lists{
+  height: 700px;
+  display: flex;
+  justify-content: space-around;
+  background-color:rgb(186, 251, 101) ;
+  color:rgb(248, 250, 247);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.incomeList li {
+ list-style-type:none;
+}
+ li:hover{
+  cursor: pointer;
+  background-color: rgb(235, 81, 15);
+}
+li:hover:before {
+  content: "Delete!"
+}
+.lists ol :nth-child(even){
+  background-color:  rgb(156, 218, 21);
+}
+.lists ol li{
+  height: 30px;
+  text-align: center;
+  margin: 5px;
+  width: 300px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.IncomeList h1{
+  color:rgb(20, 130, 10);
+  margin-bottom: 15px;
+  width: 300px;
+  text-align: center;
+
+}
+.expensesList h1{
+  color:rgb(20, 130, 10);
+  margin-bottom: 15px;
+  width: 300px;
+  text-align: center;
+}
+
+.income{
+  background-color:rgb(20, 130, 10);
+  color: white;
+  border-radius: 12px;
+  border-width: 0;
+  padding: 12px 28px;
+}
+.expences{
+  background-color: rgb(255, 213, 0);
+  color:white;
+  border-radius: 12px;
+  border-width: 0;
+  padding: 12px 28px;
+ 
 }
